# graphics-engine

./: .gitignore  CMakeLists.txt  README.md
ini/Texture Mapping/: test.ini  texture001.ini  texture002.ini  texture003.ini  texture004.ini  texture005.ini  texture006.ini  texture_clipping001.ini  texture_clipping002.ini  texture_clipping003.ini  texture_clipping004.ini  texture_clipping005.ini  texture_clipping006.ini
src/: LSystems.cc  LSystems.h  engine.cc
src/Figure3D/: Figure3D.cc  Figure3D.h  Transformations.cc  Transformations.h
src/Fractal3D/: Fractal3D.cc  Fractal3D.h
src/LSystem2D/: LSystem2D.cc  LSystem2D.h  LSystem2Lines2D.cc  LSystem2Lines2D.h  draw2DLines.cc  draw2DLines.h
src/LSystems/: LSystem2D.cc  LSystem2D.h  LSystem2Lines2D.cc  LSystem2Lines2D.h  LSystems.cc  LSystems.h  draw2DLines.cc  draw2DLines.h
src/Lighting/: Lighting.cc  Lighting.h
src/LineDrawings3D/: Figure3D.cc  Figure3D.h  Transform.cc  Transform.h
src/Texture/: Texture.cc  Texture.h
src/Wireframe/: Figure3D.cc  Figure3D.h  ZBuffer.cc  ZBuffer.h
src/ZBuffering/: ZBuffer.h  ZBuffering.cc  ZBuffering.h
src/utils/: ColorDouble.cc  ColorDouble.h  draw2DLines.cc  draw2DLines.h  easy_image.cc  easy_image.h  vector3d.h
